
@startuml
'https://plantuml.com/class-diagram


interface StateI<V=generic state variables> {
+ V getVariables();
+ set(StateI<V> state);
}

class Action {
+ asInt()
+ asDouble()
}

note left of Action : generic action type

interface TrainerI<V=generic state variables> {
+ train()
}

abstract class TrainerA {
TrainingTracker tracker
TrainerParameters parameters
}

abstract class TrainerTbdA<for specific environment> {
    EnvironmentI<<V>> environment;
    Agent<<V>> agent;
}

interface EnvironmentI<V=generic state variables> {
+  StepReturn<<V>> step(StateI<<V>> state,Action action);
'/ +  boolean isTerminalState(StateI<<V>> stateNew);
}


EnvironmentI <|-- Environment1
EnvironmentI <|-- Environment2

TrainerI <|-- TrainerA
TrainerA <|-- TrainerTbdA
TrainerTbdA  <|-- Trainer1
TrainerTbdA  <|-- Trainer2

note right of Trainer1 : May have different training algorithm than Trainer2

StateI -[hidden]- EnvironmentI
Environment1 -[hidden]- TrainerI


@enduml